# eth_trifecta_2025

./: .gitignore  README.md
backend/: Cargo.toml  README.md
backend/core/src/: lib.rs
backend/methods/guest/: Cargo.toml
backend/methods/guest/src/: main.rs
backend/res/: example.json  user.json
backend/src/: main.rs
contracts/: USDCRewardDistributor.sol
extension/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
frontend/: .eslintrc.json  .gitignore  README.md  bun.lockb  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/.next/: app-build-manifest.json  build-manifest.json  react-loadable-manifest.json
frontend/.next/server/: _error.js  app-paths-manifest.json  middleware-build-manifest.js  middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/pages/: _error.js
frontend/.next/server/vendor-chunks/: @adraffy+ens-normalize@1.11.0.js  @coinbase+wallet-sdk@3.9.3.js  @coinbase+wallet-sdk@4.3.0.js  @lit+reactive-element@1.6.3.js  @lit-labs+ssr-dom-shim@1.3.0.js  @noble+curves@1.8.1.js  (+163 more)
frontend/nextjs/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: InstructionsComponent.tsx  navbar.tsx
frontend/src/lib/: customChain.ts  utils.ts
host/src/: main.rs
risc0/: Cargo.toml
risc0/core/: Cargo.toml
risc0/core/src/: lib.rs
risc0/methods/: Cargo.toml
risc0/methods/guest/: Cargo.toml
risc0/res/: criteria.json  example.json  user.json
risc0/src/: main.rs
sp1/: Cargo.toml  README.md
sp1/lib/: Cargo.toml
sp1/lib/src/: lib.rs
sp1/program/: Cargo.toml
sp1/program/src/: main.rs
sp1/script/: Cargo.toml
(+176 files in other folders)
