[package]
name = "json-example"
version = "0.1.0"
edition = "2021"

[dependencies]
json-core = { path = "core" }
json-methods = { path = "methods" }
#risc0-zkvm = { path = "../../risc0/zkvm" }
risc0-zkvm = { version = "1.2.5", default-features = false, features = ['std'] }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]
