[package]
version = "0.1.0"
name = "ad-qualification-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
sp1-zkvm = "4.0.0"
ad-qualification-lib = { path = "../lib" }
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tower-http = { version = "0.4.4", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }

