[package]
name = "search_json"
version = "0.12.0"
edition = "2021"

[workspace]

[dependencies]
json = "0.12"
json-core = { path = "../../core" }
#risc0-zkvm = { path = "../../../../risc0/zkvm", default-features = false, features = ["std",] }
risc0-zkvm = { version = "1.2.5", default-features = false, features = ['std'] }
